[Hibernate] migrate to JPA/Criteria wip

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,5 @@ error.computer.introduced.missing=Please select an introduced date, if discontin
 error.computer.companyId=Company id is not valid.
 error.form.exception=Oops, a form submission error occured, please re submit your form.
 error.computerId=There is no computer found with given id.
+success.computer.created=Computer successfully created.
+success.computer.updated=Computer successfully updated.
